POWR-1350 policy search view, roles, workflow updates

--- a/web/sites/default/config/search_api.index.full_index.yml
+++ b/web/sites/default/config/search_api.index.full_index.yml
@@ -18,6 +18,7 @@ dependencies:
     - field.storage.group.field_summary
     - field.storage.group.field_topics
     - field.storage.node.field_audience
+    - field.storage.node.field_body_content
     - field.storage.node.field_community_actions
     - field.storage.node.field_end_date
     - field.storage.node.field_end_time
@@ -26,12 +27,12 @@ dependencies:
     - field.storage.node.field_popular
     - field.storage.node.field_published_on
     - field.storage.node.field_search_keywords
+    - field.storage.node.field_section_body
     - field.storage.node.field_start_date
     - field.storage.node.field_start_time
     - field.storage.node.field_summary
     - field.storage.node.field_topics
     - search_api.server.searchstax
-    - core.entity_view_mode.node.teaser
 third_party_settings:
   search_api_solr:
     finalize: false
@@ -139,6 +140,14 @@ field_settings:
     dependencies:
       module:
         - node
+  field_body_content:
+    label: 'Body content'
+    datasource_id: 'entity:node'
+    property_path: field_body_content
+    type: text
+    dependencies:
+      config:
+        - field.storage.node.field_body_content
   field_end_date:
     label: 'End date'
     datasource_id: 'entity:node'
@@ -212,6 +221,14 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_search_keywords
+  field_section_body:
+    label: 'Section body'
+    datasource_id: 'entity:node'
+    property_path: field_section_body
+    type: text
+    dependencies:
+      config:
+        - field.storage.node.field_section_body
   field_shortname_or_acronym:
     label: 'Shortname or acronym'
     datasource_id: 'entity:group'
@@ -331,7 +348,7 @@ field_settings:
           council_meeting: default
           development_permit: default
           event: default
-          external_resource: teaser
+          external_resource: default
           location: default
           news: default
           page: default
@@ -434,11 +451,13 @@ processor_settings:
       - action_name
       - audience_name
       - content_title
+      - field_body_content
       - field_official_organization_name
       - field_official_title
       - field_policy_category
       - field_policy_type
       - field_search_keywords
+      - field_section_body
       - field_shortname_or_acronym
       - field_summary
       - field_summary_1
