--- a/web/sites/default/config/user.role.code_editor.yml
+++ b/web/sites/default/config/user.role.code_editor.yml
@@ -67,6 +67,9 @@ permissions:
   - 'revert code_section revisions'
   - 'revert code_title revisions'
   - 'revert policy revisions'
+  - 'use charter_code_policies transition create_new_draft'
+  - 'use charter_code_policies transition publish'
+  - 'use charter_code_policies transition unpublish'
   - 'use text format basic_style_editor'
   - 'use text format full_html'
   - 'view charter_article revisions'
