--- a/web/sites/default/config/user.role.council_clerk.yml
+++ b/web/sites/default/config/user.role.council_clerk.yml
@@ -27,5 +27,8 @@ permissions:
   - 'edit own council_meeting content'
   - 'revert council_document revisions'
   - 'revert council_meeting revisions'
+  - 'use council_meetings_and_documents transition create_new_draft'
+  - 'use council_meetings_and_documents transition publish'
+  - 'use council_meetings_and_documents transition unpublish'
   - 'view council_document revisions'
   - 'view council_meeting revisions'
