--- a/web/sites/default/config/views.view.portland_policies_search.yml
+++ b/web/sites/default/config/views.view.portland_policies_search.yml
@@ -218,7 +218,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          operator: and
+          operator: or
           value: ''
           group: 1
           exposed: true
@@ -258,6 +258,7 @@ display:
           min_length: null
           fields:
             - content_title
+            - field_body_content
             - field_search_keywords
             - rendered_item
           plugin_id: search_api_fulltext
