--- a/web/sites/default/config/views.view.solr_search.yml
+++ b/web/sites/default/config/views.view.solr_search.yml
@@ -6,14 +6,13 @@ dependencies:
     - search_api.index.full_index
   module:
     - search_api
-    - text
 id: solr_search
 label: 'Solr search'
 module: views
 description: 'Default search page for all content on the site'
 tag: ''
 base_table: search_api_index_full_index
-base_field: nid
+base_field: search_api_id
 core: 8.x
 display:
   default:
@@ -64,80 +63,92 @@ display:
       style:
         type: default
       row:
-        type: fields
-      fields:
-        description:
+        type: search_api
+        options:
+          view_modes:
+            'entity:group':
+              advisory_group: search_result
+              bureau_office: search_result
+              elected_official: search_result
+              program: search_result
+              project: search_result
+            'entity:node':
+              calendar_item: search_result
+              charter_article: search_result
+              charter_chapter: search_result
+              charter_section: search_result
+              city_service: search_result
+              code_chapter: search_result
+              code_section: search_result
+              code_title: search_result
+              council_document: search_result
+              council_meeting: search_result
+              development_permit: search_result
+              event: search_result
+              external_resource: search_result
+              location: search_result
+              news: search_result
+              page: search_result
+              park_facility: search_result
+              policy: search_result
+            'entity:taxonomy_term':
+              audience: search_result
+      fields: {  }
+      filters:
+        search_api_fulltext:
+          id: search_api_fulltext
           table: search_api_index_full_index
-          field: description
-          id: description
-          entity_type: null
-          entity_field: null
-          plugin_id: search_api_field
+          field: search_api_fulltext
           relationship: none
           group_type: group
           admin_label: ''
-          label: ''
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: true
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: text_default
-          settings: {  }
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          field_rendering: true
-          fallback_handler: search_api
-          fallback_options:
-            link_to_item: false
-            use_highlighting: false
-            multi_type: separator
-            multi_separator: ', '
-      filters: {  }
+          operator: or
+          value: ''
+          group: 1
+          exposed: true
+          expose:
+            operator_id: search_api_fulltext_op
+            label: 'Fulltext search'
+            description: ''
+            use_operator: false
+            operator: search_api_fulltext_op
+            identifier: search_api_fulltext
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              sitewide_editor: '0'
+              code_editor: '0'
+              council_clerk: '0'
+              group_creator: '0'
+              park_editor: '0'
+            placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          parse_mode: terms
+          min_length: null
+          fields:
+            - content_title
+            - field_search_keywords
+            - group_field_search_keywords
+            - group_title
+            - rendered_item
+            - term_description
+            - term_name
+          plugin_id: search_api_fulltext
       sorts: {  }
       title: Search
       header: {  }
@@ -145,11 +156,12 @@ display:
       empty: {  }
       relationships: {  }
       arguments: {  }
+      display_extenders: {  }
     cache_metadata:
       max-age: -1
       contexts:
-        - 'languages:language_content'
         - 'languages:language_interface'
+        - url
         - url.query_args
       tags: {  }
   page_1:
@@ -163,7 +175,7 @@ display:
     cache_metadata:
       max-age: -1
       contexts:
-        - 'languages:language_content'
         - 'languages:language_interface'
+        - url
         - url.query_args
       tags: {  }
