--- a/web/sites/default/config/block.block.exposedformportland_policies_searchpage_1.yml
+++ b/web/sites/default/config/block.block.exposedformportland_policies_searchpage_1.yml
@@ -11,7 +11,7 @@ dependencies:
     - cloudy
 id: exposedformportland_policies_searchpage_1
 theme: cloudy
-region: content
+region: tools
 weight: -13
 provider: null
 plugin: 'views_exposed_filter_block:portland_policies_search-page_1'
@@ -24,6 +24,6 @@ settings:
 visibility:
   request_path:
     id: request_path
-    pages: "/policies*\r\n/policies/*"
+    pages: "/policies*\r\n/policies/search"
     negate: false
     context_mapping: {  }
