--- a/web/sites/default/config/facets.facet.policy_category.yml
+++ b/web/sites/default/config/facets.facet.policy_category.yml
@@ -59,6 +59,11 @@ processor_configs:
       sort: -8
     settings:
       sort: ASC
+  translate_entity:
+    processor_id: translate_entity
+    weights:
+      build: 5
+    settings: {  }
   url_processor_handler:
     processor_id: url_processor_handler
     weights:
