--- a/web/sites/default/config/views.view.admin_policies.yml
+++ b/web/sites/default/config/views.view.admin_policies.yml
@@ -1,15 +1,12 @@
-uuid: 53f2421f-87dc-4d10-9119-a2dece9baf36
+uuid: a0cddbc7-e8aa-474e-839c-cfef75919398
 langcode: en
 status: true
 dependencies:
   config:
-    - node.type.charter_article
-    - node.type.charter_chapter
-    - node.type.charter_section
-    - node.type.code_chapter
-    - node.type.code_section
-    - node.type.code_title
+    - node.type.policy
     - system.menu.editor-toolbar
+    - taxonomy.vocabulary.policy_category
+    - taxonomy.vocabulary.policy_type
     - user.role.administrator
     - user.role.code_editor
     - user.role.sitewide_editor
@@ -17,10 +14,11 @@ dependencies:
   module:
     - content_moderation
     - node
+    - taxonomy
     - user
     - views_bulk_operations
-id: admin_charter_code_policies
-label: 'Admin: Charter, Code, Policies'
+id: admin_policies
+label: 'Admin: Policies'
 module: views
 description: 'Administrative view to edit charter, code, and policies'
 tag: ''
@@ -650,14 +648,9 @@ display:
           admin_label: ''
           operator: in
           value:
-            charter_article: charter_article
-            charter_chapter: charter_chapter
-            charter_section: charter_section
-            code_chapter: code_chapter
-            code_section: code_section
-            code_title: code_title
+            policy: policy
           group: 1
-          exposed: true
+          exposed: false
           expose:
             operator_id: type_1_op
             label: Type
@@ -674,9 +667,6 @@ display:
               administrator: '0'
               sitewide_editor: '0'
               code_editor: '0'
-              council_clerk: '0'
-              group_creator: '0'
-              park_editor: '0'
             reduce: true
             argument: ''
           is_grouped: false
@@ -694,6 +684,106 @@ display:
           entity_type: node
           entity_field: type
           plugin_id: bundle
+        field_policy_category_target_id:
+          id: field_policy_category_target_id
+          table: node__field_policy_category
+          field: field_policy_category_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: or
+          value: {  }
+          group: 1
+          exposed: true
+          expose:
+            operator_id: field_policy_category_target_id_op
+            label: 'Policy category'
+            description: ''
+            use_operator: false
+            operator: field_policy_category_target_id_op
+            identifier: category_id
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              sitewide_editor: '0'
+              code_editor: '0'
+              council_clerk: '0'
+              group_creator: '0'
+              park_editor: '0'
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: false
+          type: select
+          limit: true
+          vid: policy_category
+          hierarchy: true
+          error_message: true
+          plugin_id: taxonomy_index_tid
+        field_policy_type_target_id:
+          id: field_policy_type_target_id
+          table: node__field_policy_type
+          field: field_policy_type_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: or
+          value: {  }
+          group: 1
+          exposed: true
+          expose:
+            operator_id: field_policy_type_target_id_op
+            label: 'Policy type'
+            description: ''
+            use_operator: false
+            operator: field_policy_type_target_id_op
+            identifier: policy_type_id
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              sitewide_editor: '0'
+              code_editor: '0'
+              council_clerk: '0'
+              group_creator: '0'
+              park_editor: '0'
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: false
+          type: select
+          limit: true
+          vid: policy_type
+          hierarchy: true
+          error_message: true
+          plugin_id: taxonomy_index_tid
         moderation_state:
           id: moderation_state
           table: node_field_data
@@ -705,7 +795,7 @@ display:
           value:
             charter_code_policies-draft: charter_code_policies-draft
             charter_code_policies-published: charter_code_policies-published
-            charter_code_policies-unpublished: charter_code_policies-unpublished
+            charter_code_policies-archived: charter_code_policies-archived
           group: 1
           exposed: true
           expose:
@@ -785,7 +875,7 @@ display:
           entity_field: status
           plugin_id: boolean
       sorts: {  }
-      title: 'Admin: Charter/Code'
+      title: 'Admin: Portland Policy Documents'
       header:
         area_text_custom:
           id: area_text_custom
@@ -796,7 +886,7 @@ display:
           admin_label: ''
           empty: true
           tokenize: false
-          content: "<a href=\"/node/add\" class=\"button btn-cta\">Add content</a>\r\n<p class=\"muted\">Use this to add charter or code content.</p>"
+          content: "<a href=\"/node/add/policy\" class=\"button btn-cta\">Add Portland Policy Document</a>\r\n<p class=\"muted\">If you need a new policy category or type, please use the <a href=\"/feedback\">feedback form</a>.</p>"
           plugin_id: text_custom
       footer: {  }
       empty: {  }
@@ -814,6 +904,7 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
+        - user
         - 'user.node_grants:view'
         - user.roles
       tags:
@@ -825,14 +916,14 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
-      path: code/admin
+      path: policy/admin
       menu:
         type: normal
-        title: 'Manage charter/code'
+        title: 'Manage policies'
         description: ''
         expanded: false
         parent: ''
-        weight: -45
+        weight: -46
         context: '0'
         menu_name: editor-toolbar
     cache_metadata:
@@ -842,6 +933,7 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
+        - user
         - 'user.node_grants:view'
         - user.roles
       tags:
