POWR-1353 Support editor uploaded custom Geo layer

--- a/web/sites/default/config/core.entity_view_display.media.map.embedded.yml
+++ b/web/sites/default/config/core.entity_view_display.media.map.embedded.yml
@@ -4,6 +4,8 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.media.embedded
+    - field.field.media.map.field_document
+    - field.field.media.map.field_map_type
     - field.field.media.map.field_media_in_library
     - field.field.media.map.field_media_video_embed_field
     - field.field.media.map.field_summary
@@ -11,14 +13,43 @@ dependencies:
     - media.type.map
   module:
     - ds
+    - file
+    - options
     - video_embed_field
 id: media.map.embedded
 targetEntityType: media
 bundle: map
 mode: embedded
 content:
-  field_media_video_embed_field:
+  content_moderation_control:
     weight: 0
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  field_document:
+    type: file_default
+    weight: 3
+    region: content
+    label: hidden
+    settings:
+      use_description_as_link_text: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+  field_map_type:
+    type: list_default
+    weight: 1
+    region: content
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+  field_media_video_embed_field:
+    weight: 2
     label: hidden
     settings:
       responsive: true
