--- a/web/sites/default/config/core.entity_view_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.default.yml
@@ -18,6 +18,7 @@ dependencies:
     - field.field.group.project.field_featured_groups
     - field.field.group.project.field_featured_media
     - field.field.group.project.field_legacy_path
+    - field.field.group.project.field_map
     - field.field.group.project.field_parent_group
     - field.field.group.project.field_phone
     - field.field.group.project.field_project_status
@@ -43,15 +44,16 @@ third_party_settings:
     regions:
       content:
         - field_featured_media
-        - field_display_date_toggle
         - group_date
-        - field_display_date
+        - field_display_date_toggle
         - field_summary
-        - field_featured_groups
-        - field_start_date
+        - field_display_date
         - group_site_menu_entity_view_1
-        - field_end_date
+        - field_start_date
         - field_featured_content
+        - field_end_date
+        - field_featured_groups
+        - field_map
   field_group:
     group_date:
       children:
@@ -60,7 +62,7 @@ third_party_settings:
         - field_start_date
         - field_end_date
       parent_name: ''
-      weight: 2
+      weight: 1
       format_type: html_element
       format_settings:
         id: ''
@@ -121,7 +123,7 @@ content:
             lb-col: false
             classes: {  }
   field_featured_content:
-    weight: 5
+    weight: 4
     label: above
     settings:
       view_mode: featured
@@ -191,6 +193,22 @@ content:
             fi-def-at: false
     type: entity_reference_entity_view
     region: content
+  field_map:
+    type: entity_reference_entity_view
+    weight: 6
+    label: hidden
+    settings:
+      view_mode: embedded
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+    region: content
   field_start_date:
     weight: 3
     label: hidden
@@ -208,7 +226,7 @@ content:
     type: datetime_default
     region: content
   field_summary:
-    weight: 3
+    weight: 2
     label: hidden
     settings:
       link_to_entity: false
@@ -244,7 +262,7 @@ content:
     type: string
     region: content
   group_site_menu_entity_view_1:
-    weight: 4
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
