--- a/web/sites/default/config/core.entity_form_display.media.map.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.map.default.yml
@@ -3,14 +3,19 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.media.map.field_document
+    - field.field.media.map.field_map_type
     - field.field.media.map.field_media_in_library
     - field.field.media.map.field_media_video_embed_field
     - field.field.media.map.field_summary
     - field.field.media.map.image
     - image.style.thumbnail
     - media.type.map
+    - workflows.workflow.media
   module:
+    - conditional_fields
     - content_moderation
+    - file
     - focal_point
     - gcontent_field
     - lightning_media
@@ -20,10 +25,59 @@ targetEntityType: media
 bundle: map
 mode: default
 content:
-  field_media_video_embed_field:
+  field_document:
+    weight: 7
+    settings:
+      progress_indicator: throbber
+    third_party_settings:
+      conditional_fields:
+        8dbd8ebd-6447-448b-b5d2-0370964bc8d2:
+          dependee: field_map_type
+          settings:
+            state: visible
+            condition: value
+            grouping: AND
+            values_set: 1
+            value: ''
+            values: {  }
+            value_form:
+              -
+                value: 'Geo file'
+            effect: show
+            effect_options: {  }
+            selector: ''
+          entity_type: media
+          bundle: map
+    type: file_generic
+    region: content
+  field_map_type:
     weight: 3
     settings: {  }
     third_party_settings: {  }
+    type: options_buttons
+    region: content
+  field_media_video_embed_field:
+    weight: 4
+    settings: {  }
+    third_party_settings:
+      conditional_fields:
+        80391243-fb95-4b99-a0e3-8f781fbcc153:
+          dependee: field_map_type
+          settings:
+            state: visible
+            condition: value
+            grouping: AND
+            values_set: 1
+            value: ''
+            values: {  }
+            value_form:
+              -
+                value: 'Google Map embed'
+            effect: show
+            effect_options: {  }
+            selector: ''
+          entity_type: media
+          bundle: map
     type: video_embed_field_textfield
     region: content
   field_summary:
@@ -45,7 +99,7 @@ content:
     third_party_settings: {  }
   image:
     type: image_focal_point
-    weight: 5
+    weight: 6
     settings:
       preview_image_style: thumbnail
       preview_link: true
@@ -56,9 +110,27 @@ content:
       lightning_media:
         file_links: true
         remove_button: true
+      conditional_fields:
+        50a7127d-cda8-4397-b1bf-5ca870e7c4fd:
+          dependee: field_map_type
+          settings:
+            state: visible
+            condition: value
+            grouping: AND
+            values_set: 1
+            value: ''
+            values: {  }
+            value_form:
+              -
+                value: 'Google Map embed'
+            effect: show
+            effect_options: {  }
+            selector: ''
+          entity_type: media
+          bundle: map
   moderation_state:
     type: moderation_state_default
-    weight: 7
+    weight: 9
     settings: {  }
     region: content
     third_party_settings: {  }
@@ -71,7 +143,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   preview:
-    weight: 4
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -79,7 +151,7 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 6
+    weight: 8
     region: content
     third_party_settings: {  }
 hidden:
