--- a/web/sites/default/config/core.entity_view_display.media.map.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.map.default.yml
@@ -3,6 +3,8 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.media.map.field_document
+    - field.field.media.map.field_map_type
     - field.field.media.map.field_media_in_library
     - field.field.media.map.field_media_video_embed_field
     - field.field.media.map.field_summary
@@ -10,14 +12,36 @@ dependencies:
     - media.type.map
   module:
     - ds
+    - file
+    - options
     - video_embed_field
 id: media.map.default
 targetEntityType: media
 bundle: map
 mode: default
 content:
+  content_moderation_control:
+    weight: 0
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  field_document:
+    weight: 5
+    label: hidden
+    settings:
+      use_description_as_link_text: true
+    third_party_settings: {  }
+    type: file_default
+    region: content
+  field_map_type:
+    weight: 3
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
   field_media_video_embed_field:
-    weight: 2
+    weight: 4
     label: hidden
     settings:
       responsive: true
@@ -35,7 +59,7 @@ content:
     type: video_embed_field_video
     region: content
   field_summary:
-    weight: 1
+    weight: 2
     label: hidden
     settings:
       link_to_entity: false
@@ -44,7 +68,7 @@ content:
     region: content
   name:
     type: string
-    weight: 0
+    weight: 1
     region: content
     label: hidden
     settings:
