POWR-1350 Fix the policy number field limitations

--- a/web/sites/default/config/core.entity_form_display.node.policy.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.policy.default.yml
@@ -12,7 +12,7 @@ dependencies:
     - field.field.node.policy.field_policy_type
     - field.field.node.policy.field_reviewer
     - node.type.policy
-    - workflows.workflow.editorial
+    - workflows.workflow.charter_code_policies
   module:
     - chosen_field
     - content_moderation
@@ -71,12 +71,12 @@ content:
   field_policy_number:
     weight: 3
     settings:
-      size: 4
+      size: 12
       placeholder: ''
     third_party_settings:
       maxlength:
-        maxlength_js: 4
-        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
+        maxlength_js: null
+        maxlength_js_label: ''
     type: string_textfield
     region: content
   field_policy_type:
