POWR-1088 move over changes from the accidental use of old branch

--- a/web/sites/default/config/block.block.exposedformevents_indexpage_3.yml
+++ b/web/sites/default/config/block.block.exposedformevents_indexpage_3.yml
@@ -1,4 +1,4 @@
-uuid: 13a17fe1-9786-4051-b715-dcc1e0c9c865
+uuid: c225281e-2b56-4209-92e5-7f30aedfdca8
 langcode: en
 status: true
 dependencies:
@@ -19,11 +19,11 @@ settings:
   id: 'views_exposed_filter_block:events_index-page_3'
   label: ''
   provider: views
-  label_display: '0'
+  label_display: visible
   views_label: ''
 visibility:
   request_path:
     id: request_path
-    pages: /events/recent
+    pages: "/events\r\n/events/*"
     negate: false
     context_mapping: {  }
