--- a/web/sites/default/config/views.view.events_index.yml
+++ b/web/sites/default/config/views.view.events_index.yml
@@ -246,34 +246,24 @@ display:
           admin_label: ''
           operator: between
           value:
-            min: '-1 year'
-            max: yesterday
+            min: today
+            max: '+30 days'
             value: ''
             type: date
           group: 1
           exposed: true
           expose:
-            operator_id: field_start_date_1_op
-            label: 'Date between'
-            description: ''
             use_operator: false
             operator: field_start_date_1_op
-            identifier: start_date
-            required: false
+            identifier: field_start_date_1
+            label: 'Start date'
+            description: null
             remember: false
             multiple: false
-            remember_roles:
-              authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
-              sitewide_editor: '0'
-              code_editor: '0'
-              council_clerk: '0'
-              group_creator: '0'
-              park_editor: '0'
-            placeholder: ''
-            min_placeholder: ''
-            max_placeholder: ''
+            required: false
+            min_placeholder: null
+            max_placeholder: null
+            placeholder: null
           is_grouped: false
           group_info:
             label: ''
@@ -312,7 +302,7 @@ display:
           expose:
             label: ''
           plugin_id: search_api
-      title: 'Upcoming events'
+      title: Events
       header:
         result:
           id: result
@@ -321,8 +311,8 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          empty: true
-          content: '@total upcoming events'
+          empty: false
+          content: '@total events found'
           plugin_id: result
       footer: {  }
       empty:
@@ -356,7 +346,7 @@ display:
   page_1:
     display_plugin: page
     id: page_1
-    display_title: 'Page: Upcoming events'
+    display_title: 'Upcoming events'
     position: 1
     display_options:
       display_extenders: {  }
@@ -372,24 +362,22 @@ display:
         menu_name: main
       display_description: ''
       header:
-        area:
-          id: area
+        result:
+          id: result
           table: views
-          field: area
+          field: result
           relationship: none
           group_type: group
           admin_label: ''
-          empty: true
-          tokenize: false
-          content:
-            value: '<a href="/events/recent">View recent events</a>'
-            format: simplified_editor_with_media_embed
-          plugin_id: text
+          empty: false
+          content: 'Displaying @start - @end of @total upcoming events. <a href="/events/past">View past events</a>'
+          plugin_id: result
       defaults:
         header: false
+        title: false
         filters: false
         filter_groups: false
-      exposed_block: true
+      title: 'Upcoming events'
       filters:
         type_2:
           id: type_2
@@ -430,55 +418,6 @@ display:
             group_items: {  }
           reduce_duplicates: false
           plugin_id: search_api_options
-        search_api_fulltext:
-          id: search_api_fulltext
-          table: search_api_index_full_index
-          field: search_api_fulltext
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: and
-          value: ''
-          group: 1
-          exposed: true
-          expose:
-            operator_id: ''
-            label: 'Search upcoming events'
-            description: ''
-            use_operator: true
-            operator: search_api_fulltext_op
-            identifier: search
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
-              sitewide_editor: '0'
-              code_editor: '0'
-              council_clerk: '0'
-              group_creator: '0'
-              park_editor: '0'
-            placeholder: ''
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          parse_mode: terms
-          min_length: null
-          fields:
-            - content_title
-            - rendered_item
-          plugin_id: search_api_fulltext
         field_start_date_1:
           id: field_start_date_1
           table: search_api_index_full_index
@@ -491,16 +430,16 @@ display:
             min: today
             max: '+30 days'
             value: today
-            type: date
+            type: offset
           group: 2
           exposed: false
           expose:
             operator_id: field_start_date_1_op
-            label: 'Date between'
+            label: 'Date range between'
             description: ''
             use_operator: false
             operator: field_start_date_1_op
-            identifier: date
+            identifier: start_date
             required: false
             remember: false
             multiple: false
@@ -510,9 +449,6 @@ display:
               administrator: '0'
               sitewide_editor: '0'
               code_editor: '0'
-              council_clerk: '0'
-              group_creator: '0'
-              park_editor: '0'
             placeholder: ''
             min_placeholder: ''
             max_placeholder: ''
@@ -541,7 +477,7 @@ display:
             min: ''
             max: ''
             value: today
-            type: date
+            type: offset
           group: 2
           exposed: false
           expose:
@@ -581,20 +517,19 @@ display:
       max-age: -1
       contexts:
         - 'languages:language_interface'
-        - url
         - url.query_args
       tags: {  }
-  page_3:
+  page_2:
     display_plugin: page
-    id: page_3
-    display_title: 'Page: Recent events'
+    id: page_2
+    display_title: 'Past events'
     position: 1
     display_options:
       display_extenders: {  }
-      path: events/recent
+      path: events/past
       menu:
         type: none
-        title: Events
+        title: 'Past Events'
         description: ''
         expanded: false
         parent: ''
@@ -602,7 +537,164 @@ display:
         context: '0'
         menu_name: main
       display_description: ''
+      title: 'Past events'
+      defaults:
+        title: false
+        filters: false
+        filter_groups: false
+        sorts: false
+        header: false
+      filters:
+        type_2:
+          id: type_2
+          table: search_api_index_full_index
+          field: type_2
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: or
+          value:
+            event: event
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: false
+          plugin_id: search_api_options
+        field_start_date:
+          id: field_start_date
+          table: search_api_index_full_index
+          field: field_start_date
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '<'
+          value:
+            min: ''
+            max: ''
+            value: today
+            type: offset
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            placeholder: ''
+            min_placeholder: ''
+            max_placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: search_api_date
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
+      sorts:
+        field_start_date:
+          id: field_start_date
+          table: search_api_index_full_index
+          field: field_start_date
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: DESC
+          exposed: false
+          expose:
+            label: ''
+          plugin_id: search_api
+        field_start_time:
+          id: field_start_time
+          table: search_api_index_full_index
+          field: field_start_time
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: DESC
+          exposed: false
+          expose:
+            label: ''
+          plugin_id: search_api
+        title:
+          id: title
+          table: search_api_index_full_index
+          field: title
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: ASC
+          exposed: false
+          expose:
+            label: Title
+          plugin_id: search_api
       header:
+        result:
+          id: result
+          table: views
+          field: result
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: true
+          content: 'Displaying @start - @end of @total past events. <a href="/events">View upcoming events</a>'
+          plugin_id: result
+    cache_metadata:
+      max-age: -1
+      contexts:
+        - 'languages:language_interface'
+        - url.query_args
+      tags: {  }
+  page_3:
+    display_plugin: page
+    id: page_3
+    display_title: 'Search events'
+    position: 3
+    display_options:
+      display_extenders: {  }
+      path: events/search
+      exposed_block: true
+      empty:
         area:
           id: area
           table: views
@@ -613,16 +705,18 @@ display:
           empty: true
           tokenize: false
           content:
-            value: '<a href="/events">View upcoming events</a>'
-            format: simplified_editor_with_media_embed
+            value: 'No events found in that date range.'
+            format: basic_style_editor
           plugin_id: text
       defaults:
-        header: false
+        empty: false
+        title: false
         filters: false
         filter_groups: false
-        sorts: false
-        title: false
-      exposed_block: true
+        header: false
+        cache: false
+      title: 'Search events'
+      display_description: ''
       filters:
         type_2:
           id: type_2
@@ -670,13 +764,13 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          operator: and
+          operator: or
           value: ''
           group: 1
           exposed: true
           expose:
             operator_id: ''
-            label: 'Search recent events'
+            label: Keywords
             description: ''
             use_operator: true
             operator: search_api_fulltext_op
@@ -710,6 +804,7 @@ display:
           min_length: null
           fields:
             - content_title
+            - field_search_keywords
             - rendered_item
           plugin_id: search_api_fulltext
         field_start_date_1:
@@ -719,21 +814,21 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          operator: '<='
+          operator: between
           value:
-            min: '-1 year'
-            max: yesterday
-            value: today
+            min: ''
+            max: ''
+            value: ''
             type: date
-          group: 2
-          exposed: false
+          group: 1
+          exposed: true
           expose:
             operator_id: field_start_date_1_op
-            label: 'Date between'
+            label: 'Start date is between'
             description: ''
             use_operator: false
             operator: field_start_date_1_op
-            identifier: date
+            identifier: starts
             required: false
             remember: false
             multiple: false
@@ -762,80 +857,23 @@ display:
             default_group_multiple: {  }
             group_items: {  }
           plugin_id: search_api_date
-        field_end_date:
-          id: field_end_date
-          table: search_api_index_full_index
-          field: field_end_date
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: '<='
-          value:
-            min: ''
-            max: ''
-            value: today
-            type: date
-          group: 2
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            placeholder: ''
-            min_placeholder: ''
-            max_placeholder: ''
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          plugin_id: search_api_date
       filter_groups:
         operator: AND
         groups:
           1: AND
-          2: OR
-      sorts:
-        field_start_date:
-          id: field_start_date
-          table: search_api_index_full_index
-          field: field_start_date
+      header:
+        result:
+          id: result
+          table: views
+          field: result
           relationship: none
           group_type: group
           admin_label: ''
-          order: DESC
-          exposed: false
-          expose:
-            label: ''
-          plugin_id: search_api
-        field_start_time:
-          id: field_start_time
-          table: search_api_index_full_index
-          field: field_start_time
-          relationship: none
-          group_type: group
-          admin_label: ''
-          order: DESC
-          exposed: false
-          expose:
-            label: ''
-          plugin_id: search_api
-      title: 'Recent events'
+          empty: false
+          content: 'Displaying @start - @end of @total events that match your search. <a href="/events">View upcoming events</a>.  <a href="/events/past">View past events</a>.'
+          plugin_id: result
+      cache:
+        type: none
     cache_metadata:
       max-age: -1
       contexts:
