POWR-1088 change group events to use shared exposed form

--- a/web/sites/default/config/block.block.exposedformgroup_eventsgroup_event_search.yml
+++ b/web/sites/default/config/block.block.exposedformgroup_eventsgroup_event_search.yml
@@ -1,4 +1,4 @@
-uuid: 60f3b9f8-21f8-4ac4-9b8e-a584ac1bfbe0
+uuid: 3573a111-6cea-4832-9a5e-bfdf462241d7
 langcode: en
 status: true
 dependencies:
@@ -9,21 +9,21 @@ dependencies:
     - views
   theme:
     - cloudy
-id: exposedformgroup_eventspage_1
+id: exposedformgroup_eventsgroup_event_search
 theme: cloudy
 region: tools
 weight: 0
 provider: null
-plugin: 'views_exposed_filter_block:group_events-page_1'
+plugin: 'views_exposed_filter_block:group_events-group_event_search'
 settings:
-  id: 'views_exposed_filter_block:group_events-page_1'
+  id: 'views_exposed_filter_block:group_events-group_event_search'
   label: ''
   provider: views
-  label_display: '0'
+  label_display: visible
   views_label: ''
 visibility:
   request_path:
     id: request_path
-    pages: "/*/events\r\n/group/*/events"
+    pages: "group/*/events\r\ngroup/*/events/*"
     negate: false
     context_mapping: {  }
