--- a/web/sites/default/config/views.view.group_events.yml
+++ b/web/sites/default/config/views.view.group_events.yml
@@ -719,55 +719,6 @@ display:
           field_api_classes: false
           plugin_id: field
       filters:
-        combine:
-          id: combine
-          table: views
-          field: combine
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: contains
-          value: ''
-          group: 1
-          exposed: true
-          expose:
-            operator_id: combine_op
-            label: 'Search upcoming events'
-            description: ''
-            use_operator: false
-            operator: combine_op
-            identifier: search
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
-              sitewide_editor: '0'
-              code_editor: '0'
-              council_clerk: '0'
-              group_creator: '0'
-              park_editor: '0'
-            placeholder: ''
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          fields:
-            title: title
-            field_summary: field_summary
-            field_body_content: field_body_content
-            field_search_keywords: field_search_keywords
-          plugin_id: combine
         field_start_date_value:
           id: field_start_date_value
           table: node__field_start_date
@@ -1723,6 +1674,145 @@ display:
         - 'config:field.storage.node.field_start_time'
         - 'config:field.storage.node.field_summary'
         - extensions
+  group_event_search:
+    display_plugin: page
+    id: group_event_search
+    display_title: 'Page: Search events'
+    position: 4
+    display_options:
+      display_extenders: {  }
+      path: group/%group/events/search
+      display_description: ''
+      filters:
+        combine:
+          id: combine
+          table: views
+          field: combine
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: contains
+          value: ''
+          group: 1
+          exposed: true
+          expose:
+            operator_id: combine_op
+            label: Keywords
+            description: ''
+            use_operator: false
+            operator: combine_op
+            identifier: search
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              sitewide_editor: '0'
+              code_editor: '0'
+              council_clerk: '0'
+              group_creator: '0'
+              park_editor: '0'
+            placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          fields:
+            title: title
+            field_summary: field_summary
+            field_body_content: field_body_content
+            field_search_keywords: field_search_keywords
+          plugin_id: combine
+        field_start_date_value:
+          id: field_start_date_value
+          table: node__field_start_date
+          field: field_start_date_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: between
+          value:
+            min: ''
+            max: ''
+            value: today
+            type: date
+          group: 1
+          exposed: true
+          expose:
+            operator_id: field_start_date_value_op
+            label: 'Start date between'
+            description: ''
+            use_operator: false
+            operator: field_start_date_value_op
+            identifier: starts
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              sitewide_editor: '0'
+              code_editor: '0'
+              council_clerk: '0'
+              group_creator: '0'
+              park_editor: '0'
+            placeholder: ''
+            min_placeholder: ''
+            max_placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: datetime
+      defaults:
+        filters: false
+        filter_groups: false
+        title: false
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
+      exposed_block: true
+      title: 'Search events'
+    cache_metadata:
+      max-age: -1
+      contexts:
+        - 'languages:language_content'
+        - 'languages:language_interface'
+        - route
+        - url
+        - url.query_args
+        - 'user.node_grants:view'
+        - user.permissions
+      tags:
+        - 'config:field.storage.node.field_all_day'
+        - 'config:field.storage.node.field_body_content'
+        - 'config:field.storage.node.field_end_date'
+        - 'config:field.storage.node.field_end_time'
+        - 'config:field.storage.node.field_search_keywords'
+        - 'config:field.storage.node.field_start_date'
+        - 'config:field.storage.node.field_start_time'
+        - 'config:field.storage.node.field_summary'
+        - extensions
   page_1:
     display_plugin: page
     id: page_1
@@ -2481,7 +2571,7 @@ display:
           entity_type: group
           entity_field: id
           plugin_id: field
-      exposed_block: true
+      exposed_block: false
     cache_metadata:
       max-age: -1
       contexts:
@@ -2505,11 +2595,11 @@ display:
   page_2:
     display_plugin: page
     id: page_2
-    display_title: 'Page: Recent events'
+    display_title: 'Page: Past events'
     position: 1
     display_options:
       display_extenders: {  }
-      path: group/%group/events/recent
+      path: group/%group/events/past
       defaults:
         fields: false
         group_by: false
@@ -2573,7 +2663,7 @@ display:
           entity_type: group_content
           entity_field: gid
           plugin_id: group_id
-      title: 'Recent events'
+      title: 'Past events'
       footer: {  }
       fields:
         field_end_date:
@@ -3197,7 +3287,7 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
-      exposed_block: true
+      exposed_block: false
       sorts:
         field_start_date_value:
           id: field_start_date_value
@@ -3225,55 +3315,6 @@ display:
             label: ''
           plugin_id: standard
       filters:
-        combine:
-          id: combine
-          table: views
-          field: combine
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: contains
-          value: ''
-          group: 1
-          exposed: true
-          expose:
-            operator_id: combine_op
-            label: 'Search recent events'
-            description: ''
-            use_operator: false
-            operator: combine_op
-            identifier: search
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
-              sitewide_editor: '0'
-              code_editor: '0'
-              council_clerk: '0'
-              group_creator: '0'
-              park_editor: '0'
-            placeholder: ''
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          fields:
-            title: title
-            field_summary: field_summary
-            field_body_content: field_body_content
-            field_search_keywords: field_search_keywords
-          plugin_id: combine
         field_start_date_value:
           id: field_start_date_value
           table: node__field_start_date
