POWR-1353 Use a custom field formatter on geo file

--- a/web/sites/default/config/core.entity_view_display.media.map.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.map.default.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.media.map.field_document
+    - field.field.media.map.field_geo_file
     - field.field.media.map.field_map_type
     - field.field.media.map.field_media_in_library
     - field.field.media.map.field_media_video_embed_field
@@ -25,8 +25,8 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_document:
-    weight: 5
+  field_geo_file:
+    weight: 6
     label: hidden
     settings:
       use_description_as_link_text: true
