--- a/web/sites/default/config/field.field.media.map.field_geo_file.yml
+++ b/web/sites/default/config/field.field.media.map.field_geo_file.yml
@@ -1,9 +1,9 @@
-uuid: 0731866f-344f-4219-8980-1b26a126db17
+uuid: b5a4517b-4122-4513-83d6-c14ee17a20db
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.media.field_document
+    - field.storage.media.field_geo_file
     - media.type.map
   module:
     - custom_add_another
@@ -12,14 +12,14 @@ third_party_settings:
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
-id: media.map.field_document
-field_name: field_document
+id: media.map.field_geo_file
+field_name: field_geo_file
 entity_type: media
 bundle: map
-label: 'Map file'
-description: 'Support GeoJSON (.json, .geojson) or ShapeFile (.zip) format.'
+label: 'Geo file'
+description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
