--- a/web/sites/default/config/core.entity_form_display.media.map.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.map.default.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.media.map.field_document
+    - field.field.media.map.field_geo_file
     - field.field.media.map.field_map_type
     - field.field.media.map.field_media_in_library
     - field.field.media.map.field_media_video_embed_field
@@ -25,29 +25,11 @@ targetEntityType: media
 bundle: map
 mode: default
 content:
-  field_document:
+  field_geo_file:
     weight: 7
     settings:
       progress_indicator: throbber
-    third_party_settings:
-      conditional_fields:
-        8dbd8ebd-6447-448b-b5d2-0370964bc8d2:
-          dependee: field_map_type
-          settings:
-            state: visible
-            condition: value
-            grouping: AND
-            values_set: 1
-            value: ''
-            values: {  }
-            value_form:
-              -
-                value: 'Geo file'
-            effect: show
-            effect_options: {  }
-            selector: ''
-          entity_type: media
-          bundle: map
+    third_party_settings: {  }
     type: file_generic
     region: content
   field_map_type:
@@ -130,7 +112,7 @@ content:
           bundle: map
   moderation_state:
     type: moderation_state_default
-    weight: 9
+    weight: 10
     settings: {  }
     region: content
     third_party_settings: {  }
@@ -151,7 +133,7 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 8
+    weight: 9
     region: content
     third_party_settings: {  }
 hidden:
