--- a/web/sites/default/config/core.entity_view_display.media.map.embedded.yml
+++ b/web/sites/default/config/core.entity_view_display.media.map.embedded.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.media.embedded
-    - field.field.media.map.field_document
+    - field.field.media.map.field_geo_file
     - field.field.media.map.field_map_type
     - field.field.media.map.field_media_in_library
     - field.field.media.map.field_media_video_embed_field
@@ -13,8 +13,8 @@ dependencies:
     - media.type.map
   module:
     - ds
-    - file
     - options
+    - portland_leaflet_maps
     - video_embed_field
 id: media.map.embedded
 targetEntityType: media
@@ -26,13 +26,51 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_document:
-    type: file_default
+  field_geo_file:
+    type: leaflet_formatter_default
     weight: 3
     region: content
     label: hidden
     settings:
-      use_description_as_link_text: false
+      multiple_map: '0'
+      popup_content: ''
+      leaflet_map: portlandmaps_color
+      height: '400'
+      disable_wheel: '1'
+      fullscreen_control: '1'
+      reset_map:
+        position: topright
+        control: 0
+      map_position:
+        zoom: '12'
+        minZoom: '1'
+        maxZoom: '22'
+        zoomFiner: '0'
+        force: 0
+      icon:
+        iconUrl: ''
+        shadowUrl: ''
+        iconSize:
+          x: ''
+          'y': ''
+        iconAnchor:
+          x: ''
+          'y': ''
+        shadowSize:
+          x: ''
+          'y': ''
+        shadowAnchor:
+          x: ''
+          'y': ''
+        popupAnchor:
+          x: ''
+          'y': ''
+      path: '{"color":"#3388ff","opacity":"1.0","stroke":true,"weight":3,"fill":"depends","fillColor":"*","fillOpacity":"0.2"}'
+      popup: 0
+      hide_empty_map: 0
+      leaflet_markercluster:
+        control: 0
+        options: '{"spiderfyOnMaxZoom":true,"showCoverageOnHover":true,"removeOutsideVisibleBounds": false}'
     third_party_settings:
       ds:
         ft:
