--- a/web/sites/default/config/field.field.media.map.field_media_video_embed_field.yml
+++ b/web/sites/default/config/field.field.media.map.field_media_video_embed_field.yml
@@ -18,14 +18,14 @@ entity_type: media
 bundle: map
 label: 'Map URL'
 description: "Enter the Google Maps embed URL obtained by following these steps:\r\n<ol>\r\n<li>Select <strong>Share or embed map</strong> from the Google Maps menu</li>\r\n<li>Select the <strong>Embed a map</strong> tab and click the <strong>Copy HTML</strong> button</li>\r\n<li>Paste the embed code into the Map URL field above</li>\r\n<li>Delete everything except the URL inside the <strong>iframe src</strong> attribute</li>\r\n</ol>\r\nYou should end up with a URL like:<br>\r\n<em>https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d61445.37590041816!2d-122.7012915545916!3d45.52821827611906!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1568413231275!5m2!1sen!2sus</em>"
-required: true
+required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
   allowed_providers:
     google_maps: google_maps
-    vimeo: '0'
-    youtube: '0'
     youtube_playlist: '0'
+    youtube: '0'
+    vimeo: '0'
 field_type: video_embed_field
