--- a/web/sites/default/config/field.field.media.map.image.yml
+++ b/web/sites/default/config/field.field.media.map.image.yml
@@ -18,7 +18,7 @@ entity_type: media
 bundle: map
 label: 'Preview image'
 description: 'A full size preview image or screenshot of the map that will be resized and displayed alongside the map name and summary in search results and teasers.'
-required: true
+required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
