--- a/composer.json
+++ b/composer.json
@@ -242,7 +242,8 @@
         },
         "merge-plugin": {
             "include": [
-                "core/composer.json"
+                "core/composer.json",
+                "web/modules/contrib/webform/composer.libraries.json"
             ],
             "recurse": false,
             "replace": false,
