POWR-1088 refactor the group events views

--- a/web/sites/default/config/block.block.cloudy_breadcrumbs.yml
+++ b/web/sites/default/config/block.block.cloudy_breadcrumbs.yml
@@ -22,6 +22,6 @@ settings:
 visibility:
   request_path:
     id: request_path
-    pages: "/taxonomy/term/*/*\r\n/events\r\n/events/recent"
+    pages: '/taxonomy/term/*/*'
     negate: true
     context_mapping: {  }
