--- a/web/sites/default/config/block.block.views_block__group_events_block_group_upcoming_five.yml
+++ b/web/sites/default/config/block.block.views_block__group_events_block_group_upcoming_five.yml
@@ -1,23 +1,22 @@
-uuid: d9db25d0-2fc7-4909-b8b4-87bfa2acb5f1
+uuid: 15933dde-0b18-451b-b91d-85aba4cb039b
 langcode: en
 status: true
 dependencies:
   config:
     - views.view.group_events
   module:
-    - group
-    - system
+    - ctools
     - views
   theme:
     - cloudy
-id: views_block__group_events_block_1
+id: views_block__group_events_block_group_upcoming_five
 theme: cloudy
 region: content
-weight: -9
+weight: -3
 provider: null
-plugin: 'views_block:group_events-block_1'
+plugin: 'views_block:group_events-block_group_upcoming_five'
 settings:
-  id: 'views_block:group_events-block_1'
+  id: 'views_block:group_events-block_group_upcoming_five'
   label: ''
   provider: views
   label_display: visible
@@ -25,9 +24,9 @@ settings:
   items_per_page: none
   context_mapping: {  }
 visibility:
-  group_type:
-    id: group_type
-    group_types:
+  'entity_bundle:group':
+    id: 'entity_bundle:group'
+    bundles:
       advisory_group: advisory_group
       bureau_office: bureau_office
       elected_official: elected_official
@@ -36,8 +35,3 @@ visibility:
     negate: false
     context_mapping:
       group: '@group.group_route_context:group'
-  request_path:
-    id: request_path
-    pages: '/group/*/*'
-    negate: true
-    context_mapping: {  }
