POWR-1088 respond to QA feedback

--- a/web/sites/default/config/block.block.bytopic.yml
+++ b/web/sites/default/config/block.block.bytopic.yml
@@ -1,26 +1,26 @@
-uuid: 46203147-d6fd-4d34-b305-5a8ee8597de1
+uuid: dc7d2405-62eb-49b1-99c2-7ba9385c1fe5
 langcode: en
 status: true
 dependencies:
   config:
-    - facets.facet.offered_by
+    - facets.facet.events_by_topic
   module:
     - facets
     - system
   theme:
     - cloudy
-id: offeredby
+id: bytopic
 theme: cloudy
 region: tools
 weight: 0
 provider: null
-plugin: 'facet_block:offered_by'
+plugin: 'facet_block:events_by_topic'
 settings:
-  id: 'facet_block:offered_by'
-  label: 'Offered by'
+  id: 'facet_block:events_by_topic'
+  label: 'By topic'
   provider: facets
   label_display: visible
-  block_id: offeredby
+  block_id: bytopic
 visibility:
   request_path:
     id: request_path
