--- a/web/sites/default/config/block.block.exposedformevents_indexevents_search_index.yml
+++ b/web/sites/default/config/block.block.exposedformevents_indexevents_search_index.yml
@@ -1,4 +1,4 @@
-uuid: c225281e-2b56-4209-92e5-7f30aedfdca8
+uuid: 8efee043-95bd-42a8-9cde-15af6827574b
 langcode: en
 status: true
 dependencies:
@@ -9,14 +9,14 @@ dependencies:
     - views
   theme:
     - cloudy
-id: exposedformevents_indexpage_3
+id: exposedformevents_indexevents_search_index
 theme: cloudy
 region: tools
 weight: 0
 provider: null
-plugin: 'views_exposed_filter_block:events_index-page_3'
+plugin: 'views_exposed_filter_block:events_index-events_search_index'
 settings:
-  id: 'views_exposed_filter_block:events_index-page_3'
+  id: 'views_exposed_filter_block:events_index-events_search_index'
   label: ''
   provider: views
   label_display: visible
@@ -24,6 +24,6 @@ settings:
 visibility:
   request_path:
     id: request_path
-    pages: "/events\r\n/events/*"
+    pages: "/events\r\n/events/past\r\n/events/search\r\n/events/search/*"
     negate: false
     context_mapping: {  }
