--- a/web/sites/default/config/facets.facet.events_by_topic.yml
+++ b/web/sites/default/config/facets.facet.events_by_topic.yml
@@ -1,4 +1,4 @@
-uuid: 749863ff-86f5-4bd9-b1b1-628212242f4a
+uuid: 36e200c9-47a4-4713-b2ef-33208b08db67
 langcode: en
 status: true
 dependencies:
@@ -7,13 +7,13 @@ dependencies:
     - views.view.events_index
   module:
     - search_api
-id: offered_by
-name: 'Offered by'
-url_alias: offered_by
+id: events_by_topic
+name: 'By topic'
+url_alias: events_by_topic
 weight: 0
 min_count: 5
 show_only_one_result: false
-field_identifier: portland_group_title_field
+field_identifier: group_topic_name
 facet_source_id: 'search_api:views_page__events_index__events_search_index'
 widget:
   type: checkbox
@@ -59,6 +59,11 @@ processor_configs:
       sort: 40
     settings:
       sort: ASC
+  tid_to_name:
+    processor_id: tid_to_name
+    weights:
+      build: 36
+    settings: {  }
   url_processor_handler:
     processor_id: url_processor_handler
     weights:
