--- a/web/sites/default/config/block.block.views_block__group_events_block_group_upcoming_five.yml
+++ b/web/sites/default/config/block.block.views_block__group_events_block_group_upcoming_five.yml
@@ -6,6 +6,8 @@ dependencies:
     - views.view.group_events
   module:
     - ctools
+    - group
+    - system
     - views
   theme:
     - cloudy
@@ -35,3 +37,19 @@ visibility:
     negate: false
     context_mapping:
       group: '@group.group_route_context:group'
+  group_type:
+    id: group_type
+    group_types:
+      advisory_group: advisory_group
+      bureau_office: bureau_office
+      elected_official: elected_official
+      program: program
+      project: project
+    negate: false
+    context_mapping:
+      group: '@group.group_route_context:group'
+  request_path:
+    id: request_path
+    pages: '/group/*/*'
+    negate: true
+    context_mapping: {  }
