--- a/web/sites/default/config/views.view.events_index.yml
+++ b/web/sites/default/config/views.view.events_index.yml
@@ -343,185 +343,9 @@ display:
         - url
         - url.query_args
       tags: {  }
-  page_1:
+  events_past_index:
     display_plugin: page
-    id: page_1
-    display_title: 'Upcoming events'
-    position: 1
-    display_options:
-      display_extenders: {  }
-      path: events
-      menu:
-        type: none
-        title: Events
-        description: ''
-        expanded: false
-        parent: ''
-        weight: -45
-        context: '0'
-        menu_name: main
-      display_description: ''
-      header:
-        result:
-          id: result
-          table: views
-          field: result
-          relationship: none
-          group_type: group
-          admin_label: ''
-          empty: false
-          content: 'Displaying @start - @end of @total upcoming events. <a href="/events/past">View past events</a>'
-          plugin_id: result
-      defaults:
-        header: false
-        title: false
-        filters: false
-        filter_groups: false
-      title: 'Upcoming events'
-      filters:
-        type_2:
-          id: type_2
-          table: search_api_index_full_index
-          field: type_2
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: or
-          value:
-            event: event
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            reduce: false
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          reduce_duplicates: false
-          plugin_id: search_api_options
-        field_start_date_1:
-          id: field_start_date_1
-          table: search_api_index_full_index
-          field: field_start_date
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: '>='
-          value:
-            min: today
-            max: '+30 days'
-            value: today
-            type: offset
-          group: 2
-          exposed: false
-          expose:
-            operator_id: field_start_date_1_op
-            label: 'Date range between'
-            description: ''
-            use_operator: false
-            operator: field_start_date_1_op
-            identifier: start_date
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
-              sitewide_editor: '0'
-              code_editor: '0'
-            placeholder: ''
-            min_placeholder: ''
-            max_placeholder: ''
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          plugin_id: search_api_date
-        field_end_date:
-          id: field_end_date
-          table: search_api_index_full_index
-          field: field_end_date
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: '>='
-          value:
-            min: ''
-            max: ''
-            value: today
-            type: offset
-          group: 2
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            placeholder: ''
-            min_placeholder: ''
-            max_placeholder: ''
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          plugin_id: search_api_date
-      filter_groups:
-        operator: AND
-        groups:
-          1: AND
-          2: OR
-    cache_metadata:
-      max-age: -1
-      contexts:
-        - 'languages:language_interface'
-        - url.query_args
-      tags: {  }
-  page_2:
-    display_plugin: page
-    id: page_2
+    id: events_past_index
     display_title: 'Past events'
     position: 1
     display_options:
@@ -685,9 +509,9 @@ display:
         - 'languages:language_interface'
         - url.query_args
       tags: {  }
-  page_3:
+  events_search_index:
     display_plugin: page
-    id: page_3
+    id: events_search_index
     display_title: 'Search events'
     position: 3
     display_options:
@@ -879,5 +703,181 @@ display:
       contexts:
         - 'languages:language_interface'
         - url
+        - url.query_args
+      tags: {  }
+  events_upcoming_index:
+    display_plugin: page
+    id: events_upcoming_index
+    display_title: 'Upcoming events'
+    position: 1
+    display_options:
+      display_extenders: {  }
+      path: events
+      menu:
+        type: none
+        title: Events
+        description: ''
+        expanded: false
+        parent: ''
+        weight: -45
+        context: '0'
+        menu_name: main
+      display_description: ''
+      header:
+        result:
+          id: result
+          table: views
+          field: result
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: false
+          content: 'Displaying @start - @end of @total upcoming events. <a href="/events/past">View past events</a>'
+          plugin_id: result
+      defaults:
+        header: false
+        title: false
+        filters: false
+        filter_groups: false
+      title: 'Upcoming events'
+      filters:
+        type_2:
+          id: type_2
+          table: search_api_index_full_index
+          field: type_2
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: or
+          value:
+            event: event
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: false
+          plugin_id: search_api_options
+        field_start_date_1:
+          id: field_start_date_1
+          table: search_api_index_full_index
+          field: field_start_date
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '>='
+          value:
+            min: today
+            max: '+30 days'
+            value: today
+            type: offset
+          group: 2
+          exposed: false
+          expose:
+            operator_id: field_start_date_1_op
+            label: 'Date range between'
+            description: ''
+            use_operator: false
+            operator: field_start_date_1_op
+            identifier: start_date
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              sitewide_editor: '0'
+              code_editor: '0'
+            placeholder: ''
+            min_placeholder: ''
+            max_placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: search_api_date
+        field_end_date:
+          id: field_end_date
+          table: search_api_index_full_index
+          field: field_end_date
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '>='
+          value:
+            min: ''
+            max: ''
+            value: today
+            type: offset
+          group: 2
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            placeholder: ''
+            min_placeholder: ''
+            max_placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: search_api_date
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
+          2: OR
+    cache_metadata:
+      max-age: -1
+      contexts:
+        - 'languages:language_interface'
         - url.query_args
       tags: {  }
