POWR-1433 update the migration scripts to use a single content type

--- a/web/modules/custom/portland_migrations/migrations/city_charter_articles.yml
+++ b/web/modules/custom/portland_migrations/migrations/city_charter_articles.yml
@@ -18,11 +18,14 @@ process:
     plugin: default_value
     default_value: full_html
   field_legacy_path: url
-  field_charter_chapter:
+  field_charter_parent:
     plugin: migration_lookup
     migration: city_charter_chapters
     no_stub: true
     source: chapter
+  field_charter_level:
+    plugin: default_value
+    default_value: Article
 destination:
   plugin: 'entity:node'
-  default_bundle: charter_article
+  default_bundle: city_charter
