--- a/web/modules/custom/portland_migrations/migrations/city_charter_chapters.yml
+++ b/web/modules/custom/portland_migrations/migrations/city_charter_chapters.yml
@@ -18,6 +18,9 @@ process:
     plugin: default_value
     default_value: full_html
   field_legacy_path: url
+  field_charter_level:
+    plugin: default_value
+    default_value: Chapter
 destination:
   plugin: 'entity:node'
-  default_bundle: charter_chapter
+  default_bundle: city_charter
