--- a/web/modules/custom/portland_migrations/migrations/city_charter_sections.yml
+++ b/web/modules/custom/portland_migrations/migrations/city_charter_sections.yml
@@ -18,11 +18,14 @@ process:
   field_section_body/format:
     plugin: default_value
     default_value: full_html
-  field_charter_article:
+  field_charter_parent:
     plugin: migration_lookup
     migration: city_charter_articles
     no_stub: true
     source: article_id
+  field_charter_level:
+    plugin: default_value
+    default_value: Section
 destination:
   plugin: 'entity:node'
-  default_bundle: charter_section
+  default_bundle: city_charter
