--- a/web/sites/default/config/workflows.workflow.charter_code_policies.yml
+++ b/web/sites/default/config/workflows.workflow.charter_code_policies.yml
@@ -3,9 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - node.type.charter_article
-    - node.type.charter_chapter
-    - node.type.charter_section
+    - node.type.city_charter
     - node.type.code_chapter
     - node.type.code_section
     - node.type.code_title
@@ -58,9 +56,7 @@ type_settings:
       weight: 2
   entity_types:
     node:
-      - charter_article
-      - charter_chapter
-      - charter_section
+      - city_charter
       - code_chapter
       - code_section
       - code_title
