--- a/web/sites/default/config/core.entity_form_display.node.city_charter.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.city_charter.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.city_charter.field_charter_level
+    - field.field.node.city_charter.field_charter_parent
     - field.field.node.city_charter.field_legacy_path
     - field.field.node.city_charter.field_numeric_order
     - field.field.node.city_charter.field_prefix_note
@@ -25,8 +26,35 @@ content:
     third_party_settings: {  }
     type: options_select
     region: content
+  field_charter_parent:
+    weight: 2
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings:
+      conditional_fields:
+        f983615d-9d1f-4dea-be91-2645a49445f7:
+          dependee: field_charter_level
+          settings:
+            state: visible
+            condition: value
+            grouping: AND
+            values_set: 3
+            value: ''
+            values: "Article\r\nSection"
+            value_form:
+              -
+                value: Article
+            effect: show
+            effect_options: {  }
+            selector: ''
+          entity_type: node
+          bundle: city_charter
+    type: entity_reference_autocomplete
+    region: content
   field_legacy_path:
-    weight: 5
+    weight: 6
     settings:
       size: 60
       placeholder: ''
@@ -34,14 +62,14 @@ content:
     type: string_textfield
     region: content
   field_numeric_order:
-    weight: 2
+    weight: 3
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
     region: content
   field_prefix_note:
-    weight: 3
+    weight: 4
     settings:
       rows: 5
       placeholder: ''
@@ -49,7 +77,7 @@ content:
     type: text_textarea
     region: content
   field_section_body:
-    weight: 4
+    weight: 5
     settings:
       rows: 5
       placeholder: ''
@@ -58,7 +86,7 @@ content:
         f84a56a9-263b-4784-a894-0064f5c6a848:
           dependee: field_charter_level
           settings:
-            state: '!empty'
+            state: visible
             condition: value
             grouping: AND
             values_set: 1
@@ -67,11 +95,8 @@ content:
             value_form:
               -
                 value: Section
-            effect: fill
-            effect_options:
-              fill:
-                value: ''
-                reset: 1
+            effect: show
+            effect_options: {  }
             selector: ''
           entity_type: node
           bundle: city_charter
@@ -79,13 +104,13 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 6
+    weight: 7
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 7
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -99,7 +124,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 13
+    weight: 10
     region: content
     settings:
       match_operator: CONTAINS
@@ -107,7 +132,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 8
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
