--- a/web/sites/default/config/core.entity_view_display.node.city_charter.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_charter.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.city_charter.field_charter_level
+    - field.field.node.city_charter.field_charter_parent
     - field.field.node.city_charter.field_legacy_path
     - field.field.node.city_charter.field_numeric_order
     - field.field.node.city_charter.field_prefix_note
@@ -24,6 +25,14 @@ targetEntityType: node
 bundle: city_charter
 mode: default
 content:
+  field_charter_parent:
+    weight: 2
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_prefix_note:
     weight: 0
     label: hidden
