POWR-1433 create and condense some views

--- a/web/sites/default/config/views.view.admin_charter.yml
+++ b/web/sites/default/config/views.view.admin_charter.yml
@@ -819,7 +819,7 @@ display:
           entity_field: status
           plugin_id: boolean
       sorts: {  }
-      title: 'Admin: Charter/Code'
+      title: 'Admin: Charter'
       header:
         area_text_custom:
           id: area_text_custom
@@ -861,7 +861,7 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
-      path: code/admin
+      path: charter/admin
       menu:
         type: normal
         title: 'Manage charter'
