--- a/web/sites/default/config/core.entity_view_display.node.city_charter.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_charter.default.yml
@@ -25,23 +25,30 @@ targetEntityType: node
 bundle: city_charter
 mode: default
 content:
-  field_charter_parent:
-    weight: 2
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
+  city_charter_entity_view_1:
+    weight: 3
     region: content
-  field_prefix_note:
+    settings: {  }
+    third_party_settings: {  }
+  city_charter_entity_view_2:
+    weight: 4
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  content_moderation_control:
     weight: 0
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  field_prefix_note:
+    weight: 1
     label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
   field_section_body:
-    weight: 1
+    weight: 2
     label: hidden
     settings: {  }
     third_party_settings: {  }
@@ -49,6 +56,7 @@ content:
     region: content
 hidden:
   field_charter_level: true
+  field_charter_parent: true
   field_legacy_path: true
   field_numeric_order: true
   group_content: true
