POWR-1433 update search config

--- a/web/sites/default/config/facets.facet.group_title.yml
+++ b/web/sites/default/config/facets.facet.group_title.yml
@@ -15,13 +15,16 @@ show_only_one_result: false
 field_identifier: portland_group_title_field
 facet_source_id: 'search_api:search_api_page__search_portland_gov'
 widget:
-  type: links
+  type: checkbox
   config:
     show_numbers: true
     soft_limit: 0
     soft_limit_settings:
       show_less_label: 'Show less'
       show_more_label: 'Show more'
+    show_reset_link: false
+    reset_text: 'Show all'
+    hide_reset_when_no_selection: false
 query_operator: or
 use_hierarchy: false
 expand_hierarchy: false
