--- a/web/sites/default/config/views.view.admin_charter.yml
+++ b/web/sites/default/config/views.view.admin_charter.yml
@@ -91,11 +91,12 @@ display:
           columns:
             views_bulk_operations_bulk_form: views_bulk_operations_bulk_form
             title: title
-            type: type
+            field_charter_level: field_charter_level
             status: status
             moderation_state: moderation_state
             changed: changed
             operations: operations
+            field_legacy_path: field_legacy_path
           info:
             views_bulk_operations_bulk_form:
               align: ''
@@ -109,8 +110,8 @@ display:
               separator: ''
               empty_column: false
               responsive: ''
-            type:
-              sortable: true
+            field_charter_level:
+              sortable: false
               default_sort_order: asc
               align: ''
               separator: ''
@@ -138,6 +139,11 @@ display:
               empty_column: false
               responsive: ''
             operations:
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            field_legacy_path:
               align: ''
               separator: ''
               empty_column: false
@@ -213,7 +219,7 @@ display:
             node_save_action: 0
             node_make_sticky_action: 0
             node_make_unsticky_action: 0
-            mark_for_review_action: mark_for_review_action
+            mark_for_review_action: 0
             portland_archive_action: portland_archive_action
             portland_publish_action: portland_publish_action
             views_bulk_operations_delete_entity: views_bulk_operations_delete_entity
@@ -225,8 +231,6 @@ display:
           preconfiguration:
             'entity:break_lock:node':
               label_override: ''
-            mark_for_review_action:
-              label_override: 'Mark for review'
             portland_archive_action:
               label_override: Unpublish/archive
             portland_publish_action:
@@ -739,7 +743,7 @@ display:
           value:
             charter_code_policies-draft: charter_code_policies-draft
             charter_code_policies-published: charter_code_policies-published
-            charter_code_policies-unpublished: charter_code_policies-unpublished
+            charter_code_policies-archived: charter_code_policies-archived
           group: 1
           exposed: true
           expose:
