--- a/web/sites/default/config/core.entity_view_display.node.city_charter.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_charter.search_result.yml
@@ -5,12 +5,14 @@ dependencies:
   config:
     - core.entity_view_mode.node.search_result
     - field.field.node.city_charter.field_charter_level
+    - field.field.node.city_charter.field_charter_parent
     - field.field.node.city_charter.field_legacy_path
     - field.field.node.city_charter.field_numeric_order
     - field.field.node.city_charter.field_prefix_note
     - field.field.node.city_charter.field_section_body
     - node.type.city_charter
   module:
+    - ds
     - layout_builder
     - panelizer
     - text
@@ -24,20 +26,93 @@ third_party_settings:
   layout_builder:
     allow_custom: false
     enabled: false
+  ds:
+    layout:
+      id: cloudy_card
+      library: null
+      disable_css: false
+      entity_classes: all_classes
+      settings:
+        wrappers:
+          first: div
+          second: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+        classes:
+          layout_class: {  }
+    regions:
+      second:
+        - 'bundle_field:node'
+        - node_title
+        - field_prefix_note
+    fields:
+      'bundle_field:node':
+        plugin_id: 'bundle_field:node'
+        weight: 0
+        label: hidden
+        formatter: default
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: div
+            fi-cl: 'badge badge-pill badge-light'
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
+      node_title:
+        plugin_id: node_title
+        weight: 1
+        label: hidden
+        formatter: default
+        settings:
+          link: true
+          wrapper: h3
+          class: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
 id: node.city_charter.search_result
 targetEntityType: node
 bundle: city_charter
 mode: search_result
 content:
   field_prefix_note:
-    weight: 0
+    weight: 2
     label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
-    region: content
+    region: second
 hidden:
+  city_charter_entity_view_1: true
+  city_charter_entity_view_2: true
+  content_moderation_control: true
   field_charter_level: true
+  field_charter_parent: true
   field_legacy_path: true
   field_numeric_order: true
   field_section_body: true
