--- a/web/sites/default/config/search_api_page.search_api_page.search_portland_gov.yml
+++ b/web/sites/default/config/search_api_page.search_api_page.search_portland_gov.yml
@@ -27,9 +27,7 @@ view_mode_configuration:
   'entity:group_program': search_result
   'entity:group_project': search_result
   'entity:node_calendar_item': search_result
-  'entity:node_charter_article': search_result
-  'entity:node_charter_chapter': search_result
-  'entity:node_charter_section': search_result
+  'entity:node_city_charter': search_result
   'entity:node_city_service': search_result
   'entity:node_code_chapter': search_result
   'entity:node_code_section': search_result
