POWR-1433 fix permissions

--- a/web/sites/default/config/user.role.sitewide_editor.yml
+++ b/web/sites/default/config/user.role.sitewide_editor.yml
@@ -22,6 +22,7 @@ permissions:
   - 'create charter_article content'
   - 'create charter_chapter content'
   - 'create charter_section content'
+  - 'create city_charter content'
   - 'create code_chapter content'
   - 'create code_section content'
   - 'create code_title content'
@@ -33,6 +34,7 @@ permissions:
   - 'delete any charter_article content'
   - 'delete any charter_chapter content'
   - 'delete any charter_section content'
+  - 'delete any city_charter content'
   - 'delete any code_chapter content'
   - 'delete any code_section content'
   - 'delete any code_title content'
@@ -41,12 +43,14 @@ permissions:
   - 'delete charter_article revisions'
   - 'delete charter_chapter revisions'
   - 'delete charter_section revisions'
+  - 'delete city_charter revisions'
   - 'delete code_chapter revisions'
   - 'delete code_section revisions'
   - 'delete code_title revisions'
   - 'delete own charter_article content'
   - 'delete own charter_chapter content'
   - 'delete own charter_section content'
+  - 'delete own city_charter content'
   - 'delete own code_chapter content'
   - 'delete own code_section content'
   - 'delete own code_title content'
@@ -56,6 +60,7 @@ permissions:
   - 'edit any charter_article content'
   - 'edit any charter_chapter content'
   - 'edit any charter_section content'
+  - 'edit any city_charter content'
   - 'edit any city_service content'
   - 'edit any code_chapter content'
   - 'edit any code_section content'
@@ -86,6 +91,7 @@ permissions:
   - 'edit own charter_article content'
   - 'edit own charter_chapter content'
   - 'edit own charter_section content'
+  - 'edit own city_charter content'
   - 'edit own city_service content'
   - 'edit own code_chapter content'
   - 'edit own code_section content'
@@ -111,7 +117,11 @@ permissions:
   - 'revert alert revisions'
   - 'revert all revisions'
   - 'revert building revisions'
+  - 'revert city_charter revisions'
   - 'revert city_service revisions'
+  - 'revert code_chapter revisions'
+  - 'revert code_section revisions'
+  - 'revert code_title revisions'
   - 'revert development_permit revisions'
   - 'revert event revisions'
   - 'revert guide revisions'
@@ -137,6 +147,7 @@ permissions:
   - 'view charter_article revisions'
   - 'view charter_chapter revisions'
   - 'view charter_section revisions'
+  - 'view city_charter revisions'
   - 'view city_service revisions'
   - 'view code_chapter revisions'
   - 'view code_section revisions'
