POWR-1353 Load path options

--- a/web/sites/default/config/core.entity_view_display.media.map.embedded.yml
+++ b/web/sites/default/config/core.entity_view_display.media.map.embedded.yml
@@ -65,7 +65,7 @@ content:
         popupAnchor:
           x: ''
           'y': ''
-      path: '{"color":"#3388ff","opacity":"1.0","stroke":true,"weight":3,"fill":"depends","fillColor":"*","fillOpacity":"0.2"}'
+      path: '{"color":"#3388ff","opacity":"1.0","stroke":true,"weight":3,"fill":"depends","fillColor":"#3388ff","fillOpacity":"0.2"}'
       popup: 0
       hide_empty_map: 0
       leaflet_markercluster:
